Interpret gbr/gih brush with application=imagestamp to load with color.

Otherwise, the brush image returns a grayscale image, which is useful for
using the brush in the engines, but not for loading it as a document.

BUG:442316


(cherry picked from commit eb127330c81d739f636c413c8b63b51d239706c6)